--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "vite": "^6.3.3",
     "vite-join-media-queries": "^0.1.4",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "dependencies": {
+    "swiper": "^8.4.7"
   }
 }
