--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
+    "aos": "^3.0.0-beta.6",
+    "lenis": "^1.3.1",
     "swiper": "^8.4.7"
   }
 }
